Fixed resource existence check to allow OASIS catalogs stored in jar files (needed for reuse of test factories in other projects). Improved catalog resolution logging. Added test coverage of catalog miss in domain of rewrite entry.
git-svn-id: http://svn.osgeo.org/geotools/trunk@35864 e5c1c795-43da-0310-a71f-fac65c449510